update: modified logic / fixed bug